--- a/index.html
+++ b/index.html
@@ -10,6 +10,35 @@
 <body>
   <h1>Projek X-7</h1>
 
+  <div class="prj" id="prj1">
+    <img
+      src="https://images.unsplash.com/photo-1452716726610-30ed68426a6b?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8M3w5MDM2MjB8fGVufDB8fHx8fA%3D%3D"
+      style="width: 15rem;" alt="">
+    <h3>Projek 1</h3>
+    <p>Kearifan lokal</p>
+  </div>
+
 </body>
+
+<style>
+  * {
+    box-sizing: border-box;
+    background-color: rgba(255, 0, 0, 0.1);
+  }
+
+  body {
+    height: 100vh;
+    width: 100vw;
+    text-align: center;
+  }
+
+  .prj {
+    display: flex;
+    padding: 0;
+    flex-direction: column;
+    align-items: center;
+    margin: 2rem;
+  }
+</style>
 
 </html>
