--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-  <h1>Projek X-7</h1>
+  <header>
+    <h1>Projek X-7</h1>
+  </header>
 
   <a href="pages/project-1/page.html">
     <div class="prj" id="prj1">
@@ -51,6 +53,12 @@
     color: var(--text);
   }
 
+  header {
+    background-color: var(--fg);
+    margin: 2rem;
+    border-radius: 2%;
+  }
+
   .prj {
     display: flex;
     padding: 1rem;
@@ -59,6 +67,7 @@
     margin: 2rem;
     background-color: var(--fg);
     color: var(--text);
+    border-radius: 2%;
   }
 
   a {
