--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 
   <a href="pages/project-1/page.html">
     <div class="prj" id="prj1">
-      <img
-        src="https://images.unsplash.com/photo-1452716726610-30ed68426a6b?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8M3w5MDM2MjB8fGVufDB8fHx8fA%3D%3D"
-        style="width: 15rem;" alt="">
+      <img src="thumb/WhatsApp Image 2023-11-22 at 21.43.39.jpeg" style="width: 15rem;" alt="">
       <h3>Projek 1</h3>
       <p>Kearifan lokal</p>
     </div>
@@ -24,9 +22,7 @@
 
   <a href="pages/project-2/page.html">
     <div class="prj" id="prj2">
-      <img
-        src="https://images.unsplash.com/photo-1452716726610-30ed68426a6b?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8M3w5MDM2MjB8fGVufDB8fHx8fA%3D%3D"
-        style="width: 15rem;" alt="">
+      <img src="thumb/Screenshot from 2023-11-22 21-42-23.png" style="width: 15rem;" alt="">
       <h3>Projek 2</h3>
       <p>Gaya hidup berkelanjutan</p>
     </div>
