--- a/pages/project-1/2/kelompok-2.html
+++ b/pages/project-1/2/kelompok-2.html
@@ -18,17 +18,8 @@
   <main>
     <div class="section">
       <h2>File</h2>
-      <div class="content">
-        <ul>
-          <li>
-            <a
-              href="https://drive.google.com/file/d/1jUx12kP5LpuW12C12Im98_VAe2b6DZ6o/view?usp=drive_link">Presentasi</a>
-          </li>
-          <li>
-            <a href="https://drive.google.com/file/d/1jS5RlNYJT8N2a42VEqOxOG_2jpkozthQ/view?usp=drive_link">Proposal</a>
-          </li>
-        </ul>
-      </div>
+      <a href="https://drive.google.com/file/d/1jUx12kP5LpuW12C12Im98_VAe2b6DZ6o/view?usp=drive_link">Presentasi</a>
+      <a href="https://drive.google.com/file/d/1jS5RlNYJT8N2a42VEqOxOG_2jpkozthQ/view?usp=drive_link">Proposal</a>
     </div>
 
     <div class="section">
@@ -148,7 +139,6 @@
   }
 
   a {
-    text-decoration: none;
     color: var(--text);
   }
 
