--- a/pages/project-1/3/kelompok-3.html
+++ b/pages/project-1/3/kelompok-3.html
@@ -18,17 +18,9 @@
   <main>
     <div class="section">
       <h2>File</h2>
-      <div class="content">
-        <ul>
-          <li>
-            <a
-              href="https://docs.google.com/presentation/d/1ATRKQlp9TDlieTygG16U9hQH4s7qLj25/edit?usp=drive_link&ouid=104327732326900902209&rtpof=true&sd=true">Presentasi</a>
-          </li>
-          <li>
-            <a href="https://drive.google.com/file/d/1APwo4qdurnOao_JI6gsv9xZeQ6MH2bni/view?usp=drive_link">Proposal</a>
-          </li>
-        </ul>
-      </div>
+      <a
+        href="https://docs.google.com/presentation/d/1ATRKQlp9TDlieTygG16U9hQH4s7qLj25/edit?usp=drive_link&ouid=104327732326900902209&rtpof=true&sd=true">Presentasi</a>
+      <a href="https://drive.google.com/file/d/1APwo4qdurnOao_JI6gsv9xZeQ6MH2bni/view?usp=drive_link">Proposal</a>
     </div>
 
     <div class="section">
@@ -86,7 +78,7 @@
         <div>
           <h3>Dokumentasi</h3>
           <img src="./Screenshot from 2023-11-22 18-52-28.png" alt="">
-          <img src="" alt="">
+          <img src="./WhatsApp Image 2023-11-22 at 19.16.23.jpeg" width="150rem" alt="">
           <img src="" alt="">
         </div>
       </div>
@@ -179,7 +171,6 @@
   }
 
   a {
-    text-decoration: none;
     color: var(--text);
   }
 
