--- a/pages/project-1/page.html
+++ b/pages/project-1/page.html
@@ -15,27 +15,21 @@
   <main>
     <a href="./1/kelompok-1.html">
       <div class="group">
-        <img
-          src="https://images.unsplash.com/photo-1452716726610-30ed68426a6b?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8M3w5MDM2MjB8fGVufDB8fHx8fA%3D%3D"
-          style="width: 15rem;" alt="">
+        <img src="./1/Screenshot from 2023-11-22 21-27-26.png" style="width: 15rem;" alt="">
         <h3>Kelompok 1</h3>
       </div>
     </a>
 
     <a href="./2/kelompok-2.html">
       <div class="group">
-        <img
-          src="https://images.unsplash.com/photo-1452716726610-30ed68426a6b?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8M3w5MDM2MjB8fGVufDB8fHx8fA%3D%3D"
-          style="width: 15rem;" alt="">
+        <img src="./2/Screenshot from 2023-11-22 21-28-30.png" style="width: 15rem;" alt="">
         <h3>Kelompok 2</h3>
       </div>
     </a>
 
     <a href="./3/kelompok-3.html">
       <div class="group">
-        <img
-          src="https://images.unsplash.com/photo-1452716726610-30ed68426a6b?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8M3w5MDM2MjB8fGVufDB8fHx8fA%3D%3D"
-          style="width: 15rem;" alt="">
+        <img src="./3/Screenshot from 2023-11-22 21-27-47.png" style="width: 15rem;" alt="">
         <h3>Kelompok 3</h3>
       </div>
     </a>
